<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp"
    tools:context=".PrenotatoFragment">

    <LinearLayout
        android:layout_width="349dp"
        android:layout_height="500dp"
        android:layout_marginVertical="6dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orarioprenotato"
                android:textColor="@color/purple_500"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOrarioConfermaPrenotato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/_8_00prenotato"
                android:textColor="@color/purple_200"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/capienzaprenotato"
                android:textColor="@color/purple_500"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPersoneConfermaPrenotato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:text="@string/_5prenotato"
                android:textColor="@color/purple_200"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:text="@string/personeprenotato"
                android:textColor="@color/purple_200"
                android:textSize="30sp"
                android:textStyle="bold"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/numero_tavoloprenotato"
                android:textColor="@color/purple_500"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvnTavoloPrenotato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:text="@string/_1prenotato"
                android:textColor="@color/purple_200"
                android:textSize="30sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/la_tua_prenotazione_andata_a_buon_fine_n_ti_aspettiamo"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/purple_700"
                android:layout_marginTop="150dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/homeBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="20dp"
                android:text="@string/homeprenotato"
                android:textStyle="bold"
                android:background="@drawable/round_background"
                />
        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>