<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp"
    tools:context=".ConfermaFragment">

    <LinearLayout
        android:layout_width="349dp"
        android:layout_height="500dp"
        android:layout_marginVertical="6dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orario"
                android:textColor="@color/purple_500"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOrarioConferma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/_8_00conferma"
                android:textColor="@color/purple_200"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/capienza"
                android:textColor="@color/purple_500"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPersoneConferma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:text="@string/_5conferma"
                android:textColor="@color/purple_200"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:text="@string/persone"
                android:textColor="@color/purple_200"
                android:textSize="30sp"
                android:textStyle="bold"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/numero_tavoloconferma"
                android:textColor="@color/purple_500"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvnTavolo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:text="@string/_1conferma"
                android:textColor="@color/purple_200"
                android:textSize="30sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/lightpurple_round_background"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/inserisciNome"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/inserisci_il_tuo_nome_quiconferma"
                android:autofillHints="name"
                android:textColorHint="@color/white"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/confermaBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/confermaconferma"
                android:textStyle="bold"
                android:textSize="15sp"
                android:background="@drawable/round_background"
                />

            <Button
                android:id="@+id/disdiciBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="50dp"
                android:layout_weight="1"
                android:text="@string/cancellaconferma"
                android:textStyle="bold"
                android:textSize="15sp"
                android:background="@drawable/round_background"
                />
        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>