<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="2dp"
    app:cardUseCompatPadding="true"
    android:background="@color/white" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">




        <TextView
            android:id="@+id/nomeCibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/panino"
            android:textColor="@color/purple_500"
            android:textSize="26sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/prezzoCibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_00"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold"/>




        <RelativeLayout
            android:id="@+id/expandableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <TextView
                android:id="@+id/descrizioneCibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questa_la_descrizione_del_cibo_selezionato"
                android:textColor="@color/purple_200"
                android:textSize="20sp" />

        </RelativeLayout>










    </LinearLayout>





</androidx.cardview.widget.CardView>


