<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="30dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/benvenuto_nprenota_un_tavolo_o_visiona_il_nostro_men_ancora_prima_di_arrivare"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="5dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/menuFragmentBtn"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/round_background"
        android:drawableTop="@drawable/menu"
        android:text="@string/menu"
        android:textColor="#fff"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/prenotaFragmentBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/prenotaFragmentBtn"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/round_background"
        android:drawableTop="@drawable/prenota"
        android:text="@string/prenota"
        android:textColor="#fff"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/menuFragmentBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mapsFragmentBtn"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_posizione"
        android:drawableEnd="@drawable/posizione"
        android:text="@string/posizioneText"
        android:textAlignment="textStart"
        android:textColor="#fff"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.741"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>